--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@supabase/supabase-js": "^2.58.0",
     "next": "15.5.4",
     "openai": "^5.23.1",
+    "qrcode": "^1.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
