--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "15.5.4",
     "openai": "^5.23.1",
     "qrcode": "^1.5.4",
+    "qrcode.react": "^4.2.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
